fixed spacing issues in landing, card. Sidebar width fix.

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -14,6 +14,7 @@
     margin-bottom: 3.2rem;
   }
   h3 {
+    font-size: 2.5rem;
     margin-bottom: 1.6rem;
     color: #36536B;
   }
@@ -21,6 +22,13 @@
 
 @media only screen and (max-width: 1090px) {
   .card {
-    margin: 4rem;
+    margin: 4.8rem 2rem;
   }
 }
+
+// @media only screen and (max-width: 510px) {
+//   .card {
+//     h3 {
+//     }
+//   }
+// }
