--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -1,5 +1,7 @@
 .landing {
-  height: 900px;
+  height: 100vh;
+  min-height: 680px;
+  max-height: 900px;
   position: relative;
   .container {
     display: flex;
@@ -16,6 +18,10 @@
         color: #6C8294;
         margin-left: 2rem;
         margin-top: 1.6rem;
+        strong {
+          color: #111;
+          opacity: 1;
+        }
       }
     }
     .side-b {
@@ -26,7 +32,8 @@
 
 @media only screen and (max-width: 845px) {
   .landing {
-    min-height: 100vh;
+    min-height: 660px;
+    height: 100vh;
     .container {
       flex-direction: column;
       justify-content: center;
@@ -39,6 +46,9 @@
         h1 {
           font-size: 4.8rem;
           line-height: 5.6rem;
+        }
+        p {
+          margin-left: 0;
         }
       }
       .side-b {
