--- a/src/index.scss
+++ b/src/index.scss
@@ -16,48 +16,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'DM Serif Display', serif;
-}
-
-h1 {
-  font-size: 7.2rem;
-  font-weight: 400;
-  line-height: 72px;
-  &.small {
-    font-size: 5.6rem;
-    line-height: 56px;
-  }
-}
-
-h2 {
-  font-size: 4.8rem;
-  font-weight: 400;
-}
-
-h3 {
-  font-size: 3.2rem;
-  font-weight: 400;
-  &.small {
-    font-family: 'Public Sans', sans-serif;
-    font-size: 1.8rem;
-  }
-}
-
-h4 {
-  font-size: 2.4rem;
-  line-height: 3.2rem;
-}
-
-p {
-  font-size: 1.5rem;
-  line-height: 28px;
-  opacity: .6;
-  &.italic {
-    font-style: italic;
-  }
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
